--- a/BoletinTema1ALUMNO.Rmd
+++ b/BoletinTema1ALUMNO.Rmd
@@ -172,32 +172,29 @@ libReturn$results[1:5,1]
     d.  Utiliza la función **summary**, sobre **cabbages** y **Chile** y observa como, además de otros estadísticos, también devuelve el número de valores perdidos de cada variable.
 
 ```{r}
+# Apartado a)
+dim(cabbages)
+str(cabbages)
+head(cabbages)
+tail(cabbages)
+glimpse(cabbages)
+summary(cabbages)
 
+# Apartado b)
+any(is.na(cabbages))
+colSums(sapply(cabbages, is.na))
 
+# Apartado c)
+dim(Chile)
+str(Chile)
+head(Chile)
+tail(Chile)
+glimpse(Chile)
+summary(Chile)
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+# Apartado d)
+any(is.na(Chile))
+colSums(sapply(Chile, is.na))
 
 ```
 
